# aws-firehose-application

./: .gitignore  CMakeLists.txt  FirehoseLibraryClient.cpp  FirehoseLibraryClient.h  README  firehoseTests.cpp
crossbuild/: build.sh  buildOutput.sh  copy.sh  firehose-application
